Update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
     # GITHUB_TOKEN — код, обеспечивающий интеграцию Тревиса и Гитхаба.
     # Нужно сгенерировать тут: https://github.com/settings/tokens и добавить в настройки репозитория в Тревисе
     github_token: $GITHUB_TOKEN
-    local_dir: dist # название директории, из которой будут отдаваться файлы на сервере
-    branches:
-        only:
-            - main
+    local_dir: dist # Название директории, из которой будут отдаваться файлы на сервере
+    on:
+        branch: main # Название ветки, которая будет отслеживаться
+    target_branch: gh-pages # Название ветки, в которой будет деплой
